[package]
name = "loggerson"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
rayon = "1.5"
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.10"
url = { version = "2.2", features = ["serde"] }
derive_more = "0.99"
r2d2 = "0.8"
r2d2_sqlite = "0.19"
md5 = "0.7"
once_cell = "1.9"
crossbeam-channel = "0.5"

[dependencies.rusqlite]
version = "0.26.0"
features = ["bundled"]